# practical-haskell-3e

./: LICENSE.txt  README.md  errata.md
chapter10/: CHANGELOG.md  chapter10.cabal
chapter10/src/: MyLib.hs
chapter11/: CHANGELOG.md  chapter11.cabal
chapter11/.stack-work/: stack.sqlite3
chapter11/.stack-work/ghci/6f3c5291/: cabal_macros.h
chapter11/.stack-work/ghci/8a1faed8/: cabal_macros.h
chapter11/.stack-work/ghci/f99d43a7/: cabal_macros.h
chapter11/.stack-work/install/x86_64-linux/3c58525afc8af08d3f4cb88f3692e8b5dad61dbe3dfeed5d76776127f01e2c0b/9.0.2/lib/x86_64-linux-ghc-9.0.2/chapter11-0.1.0.0-BEJVVwk7l03AXCpetkEYTp/: MyLib.dyn_hi  MyLib.hi
chapter11/.stack-work/install/x86_64-linux/3c58525afc8af08d3f4cb88f3692e8b5dad61dbe3dfeed5d76776127f01e2c0b/9.0.2/lib/x86_64-linux-ghc-9.0.2/chapter11-0.1.0.0-Jy9zav9xfAhvfOayLBCL4/: MyLib.dyn_hi  MyLib.hi
chapter11/.stack-work/install/x86_64-linux/3c58525afc8af08d3f4cb88f3692e8b5dad61dbe3dfeed5d76776127f01e2c0b/9.0.2/pkgdb/: chapter11-0.1.0.0-BEJVVwk7l03AXCpetkEYTp.conf  package.cache
chapter11/src/: MyLib.hs
chapter12/: CHANGELOG.md  chapter12.cabal
chapter12-elm/src/: Example.elm
chapter12/app/: Main.hs  bibliografia.md
chapter14/: Setup.hs  chapter14.cabal  uuagc_options
chapter14/src/Chapter14/: Simple.ag
chapter15/: CHANGELOG.md  cabal.project  chapter15.cabal
chapter15/src/.liquid/: MyLib.hs.bak  MyLib.hs.cst.html  MyLib.hs.err  MyLib.hs.html  MyLib.hs.json  MyLib.hs.smt2  MyLib.hs.vim.annot
chapter8/: chapter8.cabal
