cabal-version:      2.4
name:               chapter12
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Alejandro Serrano
maintainer:         trupill@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable chapter12
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.14, warp, wai, http-types, persistent, persistent-sqlite, monad-logger, resource-pool, text, blaze-html, shakespeare, digestive-functors, digestive-functors-blaze, wai-digestive-functors, aeson
    hs-source-dirs:   app
    default-language: Haskell2010
