cabal-version:      2.4
name:               chapter14
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Alejandro Serrano
maintainer:         trupill@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

custom-setup
  setup-depends:
    base, Cabal, uuagc, uuagc-cabal

library
    exposed-modules:  MyLib, Chapter14.Simple

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
